--- a/src/CurrentWeather.css
+++ b/src/CurrentWeather.css
@@ -13,7 +13,8 @@
   text-align: center;
 }
 
-.CurrentWeather ul {
+.CurrentWeather ul,
+p {
   list-style: none;
   font-family: "Tinos", serif;
   font-size: 20px;
