--- a/src/App.css
+++ b/src/App.css
@@ -26,15 +26,10 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App ul {
+  list-style: none;
+  font-family: "Tinos", serif;
+  font-size: 20px;
+  padding: 5px;
+  text-align: center;
 }
