Adding forecast response

--- a/src/CurrentWeather.css
+++ b/src/CurrentWeather.css
@@ -7,7 +7,7 @@
   margin-bottom: 0px;
 }
 
-.CurrentWeather ul,
+.CurrentWeather .currentWeatherInfo,
 p {
   list-style: none;
   font-family: "Tinos", serif;
