--- a/src/SearchEngine.css
+++ b/src/SearchEngine.css
@@ -13,3 +13,10 @@
   text-align: center;
   margin: 5px;
 }
+.SearchEngine .forecastRow {
+  list-style: none;
+  font-family: "Tinos", serif;
+  font-size: 18px;
+  padding: 5px;
+  text-align: center;
+}
