--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,103 @@
   text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media only screen and (max-width: 450px) {
+  h1 {
+    font-size: 45px !important;
+    padding: 2px 0 !important;
+  }
+  h2,
+  .time {
+    font-size: 20px !important;
+  }
+
+  .col-4 {
+    padding: 3px !important;
+  }
+
+  .temperature {
+    font-size: 28px !important;
+    margin-bottom: 3px !important;
+  }
+
+  .units,
+  .tempSymbol {
+    font-size: 17px !important;
+  }
+
+  p,
+  li {
+    font-size: 15px !important;
+  }
+
+  .WeatherIcon,
+  .mainIcon {
+    max-width: 100px !important;
+    margin: 0 auto;
+  }
+
+  .col,
+  .col-7,
+  .col-5 {
+    padding: 8px !important;
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  h1 {
+    font-size: 40px !important;
+    padding: 2px 0 !important;
+  }
+  h2,
+  .time {
+    font-size: 18px !important;
+    width: 100%;
+    line-height: 1.5;
+  }
+
+  .col-4 {
+    padding: 3px !important;
+  }
+
+  .search {
+    width: 90% !important;
+  }
+
+  .temperature {
+    font-size: 25px !important;
+    margin-bottom: 3px !important;
+  }
+
+  .units,
+  .tempSymbol {
+    font-size: 15px !important;
+  }
+
+  p,
+  li {
+    font-size: 12px !important;
+  }
+
+  .currentWeatherInfo {
+    margin: 0px !important;
+  }
+
+  .WeatherIcon,
+  .mainIcon {
+    width: 38px !important;
+    display: inline;
+  }
+
+  .col {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+    flex-basis: auto;
+  }
+
+  .col-7,
+  .col-5 {
+    display: contents;
+  }
 }
